/* @MENTEE_POWER (C)2025 */
package ru.mentee.power.orders;

import org.springframework.boot.SpringApplication;
import org.springframework.boot.autoconfigure.SpringBootApplication;

@SpringBootApplication
public class MCloudOrdersApplication {
    public static void main(String[] args) {
        SpringApplication.run(MCloudOrdersApplication.class, args);
    }
}
