/* @MENTEE_POWER (C)2025 */
package ru.mentee.power.orders.domain.model;

public enum Priority {
    HIGH,
    NORMAL,
    LOW
}
